--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
